--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,6 @@ body {
     text-align: center;
     font-size: 28px;
     padding: 20px;
-    width: 1980px;
+    width: 100%;
     margin: 5px;
   }
