--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,118 @@
 body {
-    background-color: black;
-    font-family: 'Comfortaa', cursive;
-  }
-  h1 {
-    color: blue;
-  }
-  p {
-    color: red;
-    font-family: 'Comfortaa', cursive;
-  }
-  img {
-    width: 100%;
-  }
-  .myDiv {
-    color: white;
-    border: 5px solid powderblue;
-    text-align: center;
-    padding: 30px;
+    background-color: powderblue;
+    background-image: url("https://i.redd.it/jnt35zy9tgz51.png");
+    background-size: 100%;
 }
-  #something {
-    border: 5px solid powderblue;
-    color: turquoise;
-    font-family: 'Reggae One', cursive;
-  }
-  .button {
-    display: inline-block;
+
+
+
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    font-family: "Comfortaa";
+    border: 5px solid black;
+    text-decoration: none;
+    color: white;
     background-color: red;
-    color: #eeeeee;
+}
+
+
+
+
+
+#clicks {
+    color: white;
+    font-family: "Comfortaa";
+    position: relative;
     text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 100%;
-    margin: 5px;
+    border-style: solid;
+    border-radius: 1.5625em;
+    border-color: lightblue;
+    margin: auto;
+}
+
+
+#head {
+    color: white;
+    font-family: "Comfortaa";
+    position: relative;
+    text-align: center;
+    border-style: solid;
+    border-radius: 1.5625em;
+    border-color: lightblue;
+    margin: auto;
   }
 
-  #totalclicks {
-    display: inline-block;
-    background-color: powderblue;
-    color: #eeeeee;
+  
+#clickbutton {
+    color: white;
+    font-family: "Comfortaa";
+    position: relative;
     text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 100%;
-    margin: 5px;
+    border-style: solid;
+    border-radius: 1.5625em;
+    border-color: lightblue;
+    margin: auto;
+    padding: 6.25em;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+}
+
+#clickbutton p {
+    font-size: 1em;
   }
+  
+#clickbutton:hover {
+background-color: lightgray;
+}
+
+#clickbutton:active {
+background-color: #bfbfbf;
+}
+
+#simonimage {
+    width: 100%;
+    height: 10%;
+}
+
+#noscript {
+    color: white;
+    font-family: "Comfortaa";
+    font-size: 200%;
+    text-align: center;
+}
+
+.box {
+    background-color: red;
+    color:black;
+    padding: 20px;
+    margin: auto;
+    height: 200%;
+    width: 50%;
+    border: 10px solid black;
+    border-radius: 10%;
+    position:relative;
+}
+
+#paragraphbox {
+    text-align: center;
+    color: black;
+    font-size: 50px;
+    font-weight:900;
+    font-family: "Comfortaa";
+
+}
+
+img.twitter {
+    width: 50px;
+    border: 3px solid black;
+    border-radius: 25px;
+    position:relative;
+    margin-top: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
