--- a/src/components/styles/skills.css
+++ b/src/components/styles/skills.css
@@ -12,6 +12,13 @@ h1 {
 .skills-table {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+@media (max-width: 768px) {
+  .skills-table {
+    grid-template-columns: 1fr; /* Change to a single column on mobile */
+  }
 }
 
 .skill-card {
@@ -29,18 +36,15 @@ h1 {
 
 .skill-card:hover p, .skill-card:hover h3 {
   font-weight: bold;
-  
-  
 }
+
 .skill-card:hover {
   border-radius: 10px;
   background: #C33764;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-clip: padding-box;
-
 }
-
 
 .skill-card img {
   width: 50px;
